--- a/requirementsDev.txt
+++ b/requirementsDev.txt
@@ -4,11 +4,11 @@ asciitree==0.3.3
 attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
 bokeh @ file:///D:/bld/bokeh_1625757103104/work
 brotlipy==0.7.0
-certifi==2021.10.8
+certifi==2021.5.30
 cffi @ file:///D:/bld/cffi_1631636516652/work
-cftime==1.5.1.1
+cftime @ file:///D:/bld/cftime_1632539856496/work
 chardet @ file:///D:/bld/chardet_1610093614045/work
-charset-normalizer==2.0.7
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
 click==7.1.2
 click-plugins==1.1.1
 cligj @ file:///home/conda/feedstock_root/build_artifacts/cligj_1633637764473/work
@@ -20,23 +20,23 @@ cytoolz==0.11.0
 dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1614995065708/work
 distributed @ file:///D:/bld/distributed_1615002770620/work
 entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
-fasteners==0.16.3
+fasteners @ file:///home/conda/feedstock_root/build_artifacts/fasteners_1621500222934/work
 fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1636203345794/work
 HeapDict==1.0.1
-idna==3.3
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
 immutables @ file:///D:/bld/immutables_1628601448828/work
 intake @ file:///home/conda/feedstock_root/build_artifacts/intake_1633987330760/work
 intake-stac @ file:///home/conda/feedstock_root/build_artifacts/intake-stac_1602861610470/work
 intake-xarray @ file:///home/conda/feedstock_root/build_artifacts/intake-xarray_1616085063298/work
 Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1636510082894/work
 kiwisolver @ file:///D:/bld/kiwisolver_1610099971815/work
-lambda-proxy==0.0.4
+lambda-proxy==5.2.1
 locket==0.2.0
 MarkupSafe @ file:///D:/bld/markupsafe_1621455827344/work
 matplotlib @ file:///D:/bld/matplotlib-suite_1611858808344/work
 monotonic==1.5
 msgpack @ file:///D:/bld/msgpack-python_1610121913322/work
-netCDF4==1.5.8
+netCDF4 @ file:///D:/bld/netcdf4_1630448147610/work
 numcodecs @ file:///D:/bld/numcodecs_1630868820193/work
 numpy @ file:///D:/bld/numpy_1626682185159/work
 olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
@@ -47,7 +47,7 @@ Pillow @ file:///D:/bld/pillow_1630696770108/work
 psutil @ file:///D:/bld/psutil_1610127248133/work
 pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
 pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1633192417276/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1635593541381/work
+pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1636323133880/work
 pyproj==1.9.6
 PyQt5==5.12.3
 PyQt5_sip==4.19.18
@@ -56,11 +56,13 @@ PyQtWebEngine==5.12.1
 PySocks @ file:///D:/bld/pysocks_1610291695773/work
 python-dateutil==2.7.5
 pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
-PyYAML==6.0
+PyYAML==5.4.1
 rasterio==1.1.7
 requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
-sat-search==0.3.0
+sat-search @ file:///home/conda/feedstock_root/build_artifacts/sat-search_1598209091152/work
 sat-stac @ file:///home/conda/feedstock_root/build_artifacts/sat-stac_1611559252873/work
+scipy @ file:///C:/bld/scipy_1629411592125/work
+Shapely==1.7.1
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 snuggs==1.4.7
 sortedcontainers @ file:///home/conda/feedstock_root/build_artifacts/sortedcontainers_1621217038088/work
